@@ -36,20 +36,25 @@ ActiveRecord::Schema.define(:version => 16) do
   end
 
   create_table "pages", :force => true do |t|
-    t.column "title",        :string
-    t.column "slug",         :string,   :limit => 100
-    t.column "breadcrumb",   :string,   :limit => 160
-    t.column "class_name",   :string,   :limit => 25
-    t.column "status_id",    :integer,                 :default => 1,     :null => false
-    t.column "parent_id",    :integer
-    t.column "layout_id",    :integer
-    t.column "created_at",   :datetime
-    t.column "updated_at",   :datetime
-    t.column "published_at", :datetime
-    t.column "created_by",   :integer
-    t.column "updated_by",   :integer
-    t.column "virtual",      :boolean,                 :default => false, :null => false
-    t.column "lock_version", :integer,                 :default => 0
+    t.column "title",             :string
+    t.column "slug",              :string,   :limit => 100
+    t.column "breadcrumb",        :string,   :limit => 160
+    t.column "class_name",        :string,   :limit => 25
+    t.column "status_id",         :integer,                 :default => 1,     :null => false
+    t.column "parent_id",         :integer
+    t.column "layout_id",         :integer
+    t.column "created_at",        :datetime
+    t.column "updated_at",        :datetime
+    t.column "published_at",      :datetime
+    t.column "created_by",        :integer
+    t.column "updated_by",        :integer
+    t.column "virtual",           :boolean,                 :default => false, :null => false
+    t.column "lock_version",      :integer,                 :default => 0
+    t.column "template_id",       :integer
+    t.column "short_description", :string
+    t.column "keywords",          :string
+    t.column "appears_on",        :date
+    t.column "expires_on",        :date
   end
 
   create_table "sessions", :force => true do |t|
@@ -73,6 +78,22 @@ ActiveRecord::Schema.define(:version => 16) do
   end
 
   add_index "snippets", ["name"], :name => "name", :unique => true
+
+  create_table "template_parts", :force => true do |t|
+    t.column "template_id", :integer
+    t.column "name",        :string
+    t.column "filter_id",   :string
+  end
+
+  add_index "template_parts", ["template_id"], :name => "index_template_parts_on_template_id"
+
+  create_table "templates", :force => true do |t|
+    t.column "name",      :string
+    t.column "sublayout", :text
+    t.column "layout_id", :integer
+  end
+
+  add_index "templates", ["name"], :name => "index_templates_on_name"
 
   create_table "users", :force => true do |t|
     t.column "name",         :string,   :limit => 100
